# Comfyui-imagetoSTL

./: README.md  __init__.py  image_to_stl_node.py  pyproject.toml
.github/workflows/: publish.yml
